--- a/becomeprof.html
+++ b/becomeprof.html
@@ -175,7 +175,7 @@
         <div class="col-md-4 inputGroupContainer">
         <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                <textarea class="form-control" name="comment" placeholder="if you have any"></textarea>
+                <textarea class="form-control" name="comment" placeholder="if you have an"></textarea>
       </div>
       </div>
     </div>
