--- a/ht.html
+++ b/ht.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -26,13 +25,13 @@
   <title>SUKHI GHAR</title>
 </head>
 
-<body class=" bg-secondary text-white">
+<body>
   <div class=" container-fluid">
     <!-- <div class="col col-2 col-sm-2"> -->
     <img src="img/a.jpg.png" alt="logo" height="42" width="42">
     <!-- </div> -->
     <!-- <div class="col col-2 col-sm-2"> -->
-    <h6>SUKHI GHAR</h6>
+    <h5>SUKHI GHAR</h5>
     <!-- </div> -->
 
     <p>Headache with Plumbing, Electrical, Painting or other house related issues, don't worry you are at the right
@@ -40,7 +39,7 @@
   </div>
 
   <div class="header" id="myHeader">
-    <nav class=" navbar-expand-md bg-dark ">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
       <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -66,7 +65,7 @@
               <a href="#beautitab" class="dropdown-item" role="tab" data-toggle="tab">BEAUTICIAN</a>
               <a href="#surveillancetab" class="dropdown-item" role="tab" data-toggle="tab">SURVEILLANCE WORK</a>
               <a href="#gardeningtab" class="dropdown-item" role="tab" data-toggle="tab">GARDENING/LANDSCAPING</a>
-              <a href="#actab" class="dropdown-item" role="tab" data-toggle="tab">A/C FREEZ SERVICES</a>
+              <a href="#actab" class="dropdown-item" role="tab" data-toggle="tab">A/C freeze maintaning</a>
               <a href="#roommoverstab" class="dropdown-item" role="tab" data-toggle="tab">ROOM MOVERS/PACKERS</a>
 
             </div>
@@ -77,11 +76,11 @@
               <span class="caret"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown_target">
-              <a href="#welcometab" class="dropdown-item" role="tab" data-toggle="tab"> WELCOME TO SUKHIGHAR</a>
-              <a href="#choosetab" class="dropdown-item" role="tab" data-toggle="tab">WHY CHOOSE US</a>
-              <a href="#companytab" class="dropdown-item" role="tab" data-toggle="tab">OUR COMPANY</a>
-              <a href="#teamtab" class="dropdown-item" role="tab" data-toggle="tab">OUR TEAM</a>
-              <a href="#termstab" class="dropdown-item" role="tab" data-toggle="tab">TERMS AND CONDITIONS</a>
+              <a href="#welcometab" class="dropdown-item" role="tab" data-toggle="tab"> Welcome to sukhighar</a>
+              <a href="#choosetab" class="dropdown-item" role="tab" data-toggle="tab">Why choose us</a>
+              <a href="#companytab" class="dropdown-item" role="tab" data-toggle="tab">Our company</a>
+              <a href="#teamtab" class="dropdown-item" role="tab" data-toggle="tab">Our Team</a>
+              <a href="#termstab" class="dropdown-item" role="tab" data-toggle="tab">Terms and conditions</a>
             </div>
           </li>
           <li class="nav-item">
@@ -90,10 +89,10 @@
 
           </li>
           <li class="nav-item">
-            <a href="#contactustab" role="tab" data-toggle="tab" class="nav-link">CONTACT US</a>
+            <a href="#contactustab" role="tab" data-toggle="tab" class="nav-link">Contact us</a>
           </li>
           <li class="nav-item">
-            <a href="becomeprof.html" class="nav-link">BECOME A PROFESSIONAL</a>
+            <a href="becomeprof.html" class="nav-link">Become a professional</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link" id="myBtn">LOGIN/SIGN UP</a>
@@ -104,7 +103,6 @@
       <div>
     </nav>
   </div>
-
 
 
   <!-- main content -->
@@ -124,7 +122,7 @@
       <div class="container-fluid">
       <div class="row">
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Electrician</a></h3>
+          <h3 class="text-white">Electrician</a></h3>
           <a href="order.html"><img src="img/renovate.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -132,7 +130,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Construction</a></h3>
+          <h3 class="text-white">Construction</a></h3>
           <a href="order.html"><img src="img/interior.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -140,7 +138,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Plumbing</a></h3>
+          <h3 class="text-white">Plumbing</a></h3>
           <a href="order.html"><img src="img/plumbing4.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -148,7 +146,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Painting</a></h3>
+          <h3 class="text-white">Painting</a></h3>
           <a href="order.html"><img src="img/painting.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -158,7 +156,7 @@
 
         <!-- <div class="row rbox"> -->
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Furnishing</a></h3>
+          <h3 class="text-white">Furnishing</a></h3>
           <a href="order.html"><img src="img/furnishing.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -166,7 +164,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Cleaning</a></h3>
+          <h3 class="text-white">Cleaning</a></h3>
           <a href="order.html"><img src="img/cleaning.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -174,7 +172,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Surveillance</a></h3>
+          <h3 class="text-white">Surveillance</a></h3>
           <a href="order.html"><img src="img/surveillance.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -182,7 +180,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">A/C Service</a></h3>
+          <h3 class="text-white">A/C Service</a></h3>
           <a href="order.html"><img src="img/acfreez.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -193,7 +191,7 @@
 
         <!-- <div class="row rbox"> -->
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Gardening</a></h3>
+          <h3 class="text-white">Gardening</a></h3>
           <a href="order.html"><img src="img/gardining.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -201,7 +199,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Room mover</a></h3>
+          <h3 class="text-white">Room mover</a></h3>
           <a href="order.html"><img src="img/room.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -209,7 +207,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Web site dev.</a></h3>
+          <h3 class="text-white">Web site dev.</a></h3>
           <a href="order.html"><img src="img/website.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -217,7 +215,7 @@
         </div>
 
         <div class="col-6 col-sm-4 col-md-3">
-          <h3 class="text-info">Software dev.</a></h3>
+          <h3 class="text-white">Software dev.</a></h3>
           <a href="order.html"><img src="img/software.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -227,7 +225,7 @@
 
         <!-- <div class="row rbox"> -->
         <div class="col-6 col-sm-4 col-md-2">
-          <h3 class="text-info">App dev.</a></h3>
+          <h3 class="text-white">App dev.</a></h3>
           <a href="order.html"><img src="img/app.jpg" alt="loading" width="200" height="200"></a>
           <div>
             <a href="order.html" class="btn btn-primary ">Ask now</a>
@@ -243,7 +241,7 @@
 
         <div class="row">
           <div class="col col-6 col-sm-4 col-md-3">
-            <h5 class="text-info">Survey</a></h5>
+            <h5 class="text-white">Survey</a></h5>
             <a href="order.html"><img src="img/survey.jpg" alt="loading" width="200" height="200"></a>
             <div>
               <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
@@ -254,7 +252,7 @@
           </div>
 
           <div class="col col-6 col-sm-4 col-md-3">
-            <h5 class="text-info">Design</a></h5>
+            <h5 class="text-white">Design</a></h5>
             <a href="order.html"><img src="img/design.jpg" alt="loading" width="200" height="200"></a>
             <div>
               <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
@@ -266,7 +264,7 @@
 
 
           <div class="col col-6 col-sm-4 col-md-3">
-            <h5 class="text-info">Estimation</a></h5>
+            <h5 class="text-white">Estimation</a></h5>
             <a href="order.html"><img src="img/estimation.jpg" alt="loading" width="200" height="200"></a>
             <div>
               <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
@@ -277,7 +275,7 @@
           </div>
 
           <div class="col col-6 col-sm-4 col-md-3">
-            <h5 class="text-info"> Project Report</a></h5>
+            <h5 class="text-white"> Project Report</a></h5>
             <a href="order.html"><img src="img/projectreport.jpg" alt="loading" width="200" height="200"></a>
             <div>
               <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
@@ -287,7 +285,7 @@
           </div>
 
           <div class="col col-6 col-sm-4 col-md-3">
-            <h5 class="text-info"> supervision</a></h5>
+            <h5 class="text-white"> supervision</a></h5>
             <a href="order.html"><img src="img/supervision.jpg" alt="loading" width="200" height="200"></a>
             <div>
               <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
@@ -369,7 +367,7 @@
 
 
 
-      <div class=" tab-pane container-fluid" id="plumbingtab">
+      <div class=" tab-pane" id="plumbingtab">
         <h3 class="text-center text-info">PLUMBING</h3>
         <div>
           <!-- <a href="order.html"><img src="img/plumbing.jpg" alt="loading" width="150" height="150"></a> -->
@@ -394,7 +392,7 @@
         </div>
       </div>
 
-      <div class="tab-pane container-fluid" id="electriciantab">
+      <div class="tab-pane" id="electriciantab">
         <h3 class="text-center text-info">ELECTRICIAN</h3>
         <div>
           <h5 class=" text-white">
@@ -418,7 +416,7 @@
         <!-- <div><a href="order.html" class="btn btn-primary btn-default ">Ask now</a> </div> -->
       </div>
 
-      <div class="tab-pane container-fluid" id="furnishingtab">
+      <div class="tab-pane" id="furnishingtab">
         <h3 class="text-center text-info">FURNISHING</h3>
         <div>
           <!-- <a href="order.html"><img src="img/plumbing.jpg" alt="loading" width="150" height="150"></a> -->
@@ -443,7 +441,7 @@
         <!-- <div><a href="order.html" class="btn btn-primary btn-default ">Ask now</a> </div> -->
       </div>
 
-      <div class="tab-pane container-fluid" id="surveillancetab">
+      <div class="tab-pane" id="surveillancetab">
         <h3 class="text-center text-info">SURVEILLANCE WORK</h3>
         <div>
           <!-- <a href="order.html"><img src="img/plumbing.jpg" alt="loading" width="150" height="150"></a> -->
@@ -467,7 +465,7 @@
         </div>
       </div>
 
-      <div class="tab-pane container-fluid" id="gardeningtab">
+      <div class="tab-pane" id="gardeningtab">
         <h3 class="text-center text-info">GARDENING/LANDSCAPING</h3>
         <div>
           <h5 class=" text-white">
@@ -488,7 +486,7 @@
         <!-- <div><a href="order.html" class="btn btn-primary btn-default ">Ask now</a> </div> -->
       </div>
 
-      <div class="tab-pane container-fluid" id="roommoverstab">
+      <div class="tab-pane" id="roommoverstab">
         <h3 class="text-center text-info">ROOM MOVERS/PACKERS</h3>
         <div>
           <h5 class=" text-white">
@@ -519,10 +517,8 @@
       </div>
 
 
-      <div class="tab-pane container-fluid" id="cleaningtab">
+      <div class="tab-pane" id="cleaningtab">
         <h3 class="text-center text-info">CLEAN EVERYTHING</h3>
-        <div class="row">
-          <div class="col col-sm-4 col-6">
         <h5 class="text-white">Deep Cleaning</a></h5>
         <a href="order.html"><img src="img/cleaning.jpg" alt="loading" width="200" height="200"></a>
         <div>
@@ -530,8 +526,8 @@
         </div>
         <div><a href="order.html" class="btn btn-primary ">Ask now</a>
         </div>
-      </div>
-      <div class="col col-sm-4 col-6">
+
+
         <h5 class="text-white">General Cleaning</a></h5>
         <a href="order.html"><img src="img/clean1.jpg" alt="loading" width="200" height="200"></a>
         <div>
@@ -541,37 +537,30 @@
           <a href="order.html" class="btn btn-primary ">Ask now</a>
         </div>
       </div>
-      </div>
-    </div>
 
 
 
-      <div class="tab-pane container-fluid" id="Paintingtab">
+      <div class="tab-pane" id="Paintingtab">
         <h3 class="text-center text-info">Painting</h3>
-        <div class="row">
-          <div class="col col-6 col-sm-4">
-            <h5 class="text-white">Exterior Wall Painting</a></h5>
-            <a href="order.html"><img src="img/paint.jpg" alt="loading" width="200" height="200"></a>
-            <div>
-              <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
-            </div>
-             <div><a href="order.html" class="btn btn-primary ">Ask now</a>
-            </div>
-            </div>
+        <h5 class="text-white">Exterior Wall Painting</a></h5>
+        <a href="order.html"><img src="img/paint.jpg" alt="loading" width="200" height="200"></a>
+        <div>
+          <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
+        </div>
+        <div><a href="order.html" class="btn btn-primary ">Ask now</a>
+        </div>
 
-            <div class="col col-6 col-sm-4">
-            <h5 class="text-white">Interior Wall Painting</a></h5>
-            <a href="order.html"><img src="img/interwall.jpg" alt="loading" width="200" height="200"></a>
-            <div>
-              <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
-            </div>
-            <div><a href="order.html" class="btn btn-primary ">Ask now</a>
-            </div>
-         </div>
+
+        <h5 class="text-white">Interior Wall Painting</a></h5>
+        <a href="order.html"><img src="img/interwall.jpg" alt="loading" width="200" height="200"></a>
+        <div>
+          <h6>here we are going to discuss about surveys and other thing such as all about it types</h6>
+        </div>
+        <div><a href="order.html" class="btn btn-primary ">Ask now</a>
         </div>
       </div>
 
-      <div class="tab-pane container-fluid" id="actab">
+      <div class="tab-pane" id="actab">
         <h3 class="text-center text-info">AC freez maintaning</h3>
 
         <div>
@@ -586,16 +575,11 @@
                Start and Stop Unit Operation<br><br>
 
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col text-center">
-              <a href="order.html" class="btn btn-primary">Ask now</a>
-            </div>
-          </div>
-        </div>
+        <div><a href="order.html" class="btn btn-primary ">Ask now</a> </div>
+
       </div>
 
-      <div class="tab-pane container-fluid" id="teamtab">
+      <div class="tab-pane" id="teamtab">
 
         <h3 class="text-center text-info">Our Team</h3>
 
@@ -622,7 +606,7 @@
 
       </div>
 
-      <div class="tab-pane container-fluid" id="choosetab">
+      <div class="tab-pane" id="choosetab">
         <h3 class="text-center text-info">Why Choose Us</h3>
         <p> Run by a team of civil engineers
           100% satisfaction guaranteed or free rework
@@ -641,7 +625,7 @@
 
 
       </div>
-      <div class="tab-pane container-fluid" id="companytab">
+      <div class="tab-pane" id="companytab">
         <h3 class="text-center text-info">Our company</h3>
         <p>
           “To evolve is to sustain” with this simple philosophy, Sukhi Ghar was established in 2018 that runs under an
@@ -656,7 +640,7 @@
 
       </div>
 
-      <div class="tab-pane container-fluid" id="faqtab">
+      <div class="tab-pane" id="faqtab">
         <h3 class="text-center text-info">FAQ</h3>
         <h5>What is your estimated cost for the maintenance of plumbing services?</h5>
         <span> charge for the maintenance is based on the time consumed by the plumbers in your house or business and
@@ -693,7 +677,7 @@
 
       </div>
 
-      <div class="tab-pane container-fluid" id="contactustab">contact tab
+      <div class="tab-pane" id="contactustab">contact tab
 
       </div>
 
@@ -795,40 +779,40 @@
 
       </footer>
 
-
-  <script>
-
-    $(document).ready(function () {
-      $("#myBtn").click(function () {
-        $("#myModal").modal();
-      });
-    });
-
-    // Get the modal
-    var modal = document.getElementById('id01');
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-
-    window.onscroll = function () { myFunction() };
-
-    var header = document.getElementById("myHeader");
-    var sticky = header.offsetTop;
-
-    function myFunction() {
-      if (window.pageYOffset > sticky) {
-        header.classList.add("sticky");
-      } else {
-        header.classList.remove("sticky");
-      }
-    }
-
-  
-  </script>
 </body>
 
 </html>
+<script>
+
+  $(document).ready(function () {
+    $("#myBtn").click(function () {
+      $("#myModal").modal();
+    });
+  });
+
+  // Get the modal
+  var modal = document.getElementById('id01');
+
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function (event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+
+  window.onscroll = function () { myFunction() };
+
+  var header = document.getElementById("myHeader");
+  var sticky = header.offsetTop;
+
+  function myFunction() {
+    if (window.pageYOffset > sticky) {
+      header.classList.add("sticky");
+    } else {
+      header.classList.remove("sticky");
+    }
+  }
+
+
+
+</script>
